style: format code
