# docs/swagger.json
@@ -425,6 +425,54 @@
                 }
             }
         },
+        "/users/link": {
+            "patch": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "link user  with role in the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Link user with role",
+                "parameters": [
+                    {
+                        "description": "Descrição do parâmetro",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.LinkUserWithRoleBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/shared.CreateResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/users/list": {
             "get": {
                 "security": [
@@ -635,7 +683,8 @@
                     "enum": [
                         "active",
                         "inactive",
-                        "pending"
+                        "pending",
+                        "complete"
                     ],
                     "example": "pending"
                 },
@@ -665,7 +714,7 @@
                     "type": "string",
                     "maxLength": 8,
                     "minLength": 6,
-                    "example": "test123456"
+                    "example": "test1234"
                 },
                 "username": {
                     "type": "string",
@@ -675,13 +724,28 @@
                 }
             }
         },
+        "handlers.LinkUserWithRoleBody": {
+            "type": "object",
+            "required": [
+                "role_id",
+                "user_id"
+            ],
+            "properties": {
+                "role_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "user_id": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
         "handlers.UpdateTaskBody": {
             "type": "object",
             "properties": {
                 "name": {
                     "type": "string",
-                    "maxLength": 100,
-                    "minLength": 4,
                     "example": "New Name"
                 },
                 "status": {
@@ -689,7 +753,8 @@
                     "enum": [
                         "active",
                         "inactive",
-                        "pending"
+                        "pending",
+                        "complete"
                     ],
                     "example": "pending"
                 },
